05-istio-gateway/webapp.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: webapp-deployment-5.0
  namespace: istio-app
  labels:
    # Istio does routing based on application version.
    # All deployments and pods must have app and version labels applied.
    app: webapp
    version: v5.0
spec:
  replicas: 1
  selector:
    matchLabels:
      app: webapp
  template:
    metadata:
      labels:
        app: webapp
        version: v5.0
    spec:
      containers:
        - name: webapp
          image: alextanhongpin/python:5.0
          imagePullPolicy: Never
          ports:
            - containerPort: 5000
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: webapp-deployment-4.0
  namespace: istio-app
  labels:
    # Istio does routing based on application version.
    # All deployments and pods must have app and version labels applied.
    app: webapp
    version: v4.0
spec:
  replicas: 1
  selector:
    matchLabels:
      app: webapp
  template:
    metadata:
      labels:
        app: webapp
        version: v4.0
    spec:
      containers:
        - name: webapp
          image: alextanhongpin/python:5.0
          imagePullPolicy: Never
          ports:
            - containerPort: 5000
---
apiVersion: v1
kind: Service
metadata:
  name: webservice
  namespace: istio-app
spec:
  type: NodePort
  selector:
    app: webapp
  ports:
    # Istio routing requires names for ports that are defined in the Kubernetes
    # services in the <protocol>[<suffix>] format.
    # NOTE: If we are using TLS, it has to be https.
    - name: http-webservice
      protocol: TCP
      port: 80
      targetPort: 5000
