05-istio-gateway/webapp-gateway.yaml
---
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: webapp-gateway
  namespace: istio-app
spec:
  selector:
    istio: ingressgateway
  servers:
    # - port:
    #     number: 80
    #     name: http
    #     protocol: HTTP
    #   hosts:
    #     - '*.greetings.com'
    - port:
        number: 443
        name: https
        protocol: HTTPS
      tls:
        mode: SIMPLE
        serverCertificate: /etc/istio/ingressgateway-certs/tls.cert
        privateKey: /etc/istio/ingressgateway-certs/tls.key
      hosts:
        - '*.greetings.com'
