05-istio-gateway/webapp-wtdist-vs.yaml
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: webservice-wtdist-vs
  namespace: istio-app
spec:
  hosts:
    - webservice
    - webservice.greetings.com
  gateways:
    - webapp-gateway
    # Applies to all the sidecars in the mesh.
    - mesh
  http:
    - route:
        - destination:
            host: webservice
            subset: v1
          weight: 25
        - destination:
            host: webservice
            subset: v0
          weight: 75
